Fixes divider in the menu bar which goes off to the scrollbar

--- a/src/components/SideBar/SideBar.less
+++ b/src/components/SideBar/SideBar.less
@@ -47,3 +47,7 @@
 	cursor: pointer;
 	text-transform: uppercase;
 }
+.sideBarMain .ps-scrollbar-y-rail{
+	right:0 !important;
+	z-index: 9;
+}
